--- a/css/header.css
+++ b/css/header.css
@@ -8,7 +8,6 @@ the title "ScriBBler" & the sub-heading below "ScriBBLer" */
 
 .header {
   display: flex;
-  justify-content: center;
   justify-content: space-between;
 }
 
