--- a/css/post.css
+++ b/css/post.css
@@ -5,7 +5,6 @@
 }
 
 .modal-title {
-  margin-left: 20%;
   text-align: center;
 }
 
@@ -22,9 +21,9 @@
   margin-top: 2%;
 }
 
-#ModalSignIn {
+/* #ModalSignIn {
   margin-left: 10%;
-}
+} */
 
 .input {
   background-color: lightgray;
